@@ -41,6 +41,10 @@
 #include "WebSocket.h"
 #include "WorkerContextExecutionProxy.h"
 
+#if USE(V8)
+#include "V8DOMWindowShell.h"
+#endif
+
 #include <wtf/Assertions.h>
 #include <wtf/Threading.h>
 
@@ -78,6 +82,9 @@ void initialize(WebKitClient* webKitClient)
 
 void shutdown()
 {
+#if USE(V8)
+    WebCore::V8DOMWindowShell::uninitializeV8IfNeeded();
+#endif
     s_webKitClient = 0;
 }
 
